@@ -1,192 +1,220 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.openntf.domino</groupId>
-	<artifactId>domino</artifactId>
-	<version>1.5.0-SNAPSHOT</version>
-	<packaging>pom</packaging>
-
-	<name>OpenNTF Domino API</name>
+	<!-- Refer to aggregator -->
+	<parent>
+		<groupId>org.openntf.domino</groupId>
+		<artifactId>aggregator</artifactId>
+		<version>1.5.1-SNAPSHOT</version>
+	</parent>
 
 	<properties>
+		<!-- it's always a good idea to use UTF8 -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<tycho-version>0.21.0</tycho-version>
+
+		<!-- We must use java 1.6 compiler level -->
 		<compiler>1.6</compiler>
+
+		<!-- Third party dependencies -->
+		<guava-version>18.0</guava-version>
+		<javassist-version>3.18.2-GA</javassist-version>
+		<tinkerpop-blueprints-version>2.6.0</tinkerpop-blueprints-version>
+		<skip.tests>false</skip.tests>
+		<domino.installdir>${user.home}/.m2/openntf-domino-ci/bin</domino.installdir>
 	</properties>
 
 	<repositories>
-		<repository>
-			<id>notes</id>
-			<layout>p2</layout>
-			<url>${notes-platform}</url>
-		</repository>
+
+
 	</repositories>
 
-	<modules>
-		<module>externals</module>
-		<module>formula</module>
-		<module>core</module>
-		<module>xsp</module>
-		<module>junit4xpages</module>
-		<module>tests</module>
-		<module>org.openntf.domino.feature.group</module>
-		<module>org.openntf.domino.updatesite</module>
-		<module>oda-dist</module>
-	</modules>
+
+
+	<!-- the name of this project Children must refer exactly to this groupID:artifactId:version 
+		Note: The maven-release-plugin can change this info in all dependent POMs -->
+	<artifactId>root</artifactId>
+	<packaging>pom</packaging>
+
+
+	<name>OpenNTF Domino API</name>
+	<!-- <repositories> <repository> <id>ibm-repository</id> <name>IBM-Build-Management</name> 
+		<url>file:///${basedir}/ibm-build-management/repository</url> <layout>default</layout> 
+		</repository> </repositories> -->
+
+	<dependencies>
+		<dependency>
+			<groupId>org.openntf</groupId>
+			<artifactId>thirdparty</artifactId>
+			<version>1.5.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+
+	<profiles>
+		<profile>
+			<id>default</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<modules>
+				<module>ci-env</module>
+				<module>formula</module>
+				<module>core</module>
+				<module>xsp</module>
+				<module>externals</module>
+				<module>graph</module>
+				<module>updatesite</module>
+				<!-- <module>graph</module> <module>externals</module> <module>formula</module> 
+					<module>junit4xpages</module> <module>tests</module> <module>org.openntf.domino.feature.group</module> 
+					<module>org.openntf.domino.updatesite</module> <module>oda-dist</module> -->
+			</modules>
+		</profile>
+
+		<!-- Here we can add different build profiles. A "mvn install -Pcore" will 
+			install the core only -->
+		<profile>
+			<id>core</id>
+			<modules>
+				<module>core</module>
+				<module>updatesite</module>
+			</modules>
+			<properties>
+				<skip.tests>true</skip.tests>
+			</properties>
+		</profile>
+		<profile>
+			<id>xsp</id>
+			<modules>
+				<!-- recompile core also -->
+				<module>core</module>
+				<module>xsp</module>
+				<module>updatesite</module>
+			</modules>
+			<properties>
+				<skip.tests>true</skip.tests>
+			</properties>
+		</profile>
+
+	</profiles>
 
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-eclipse-plugin</artifactId>
-				<version>2.6</version>
-				<configuration>
-					<!-- <projectNameTemplate>${project.groupId}-${project.artifactId}</projectNameTemplate> 
-						<downloadSources>true</downloadSources> <downloadJavadocs>false</downloadJavadocs> 
-						<additionalBuildcommands> <buildcommand>org.eclipse.jdt.core.javabuilder</buildcommand> 
-						<buildcommand>org.eclipse.pde.ManifestBuilder</buildcommand> <buildcommand>org.eclipse.pde.SchemaBuilder</buildcommand> 
-						</additionalBuildcommands> <additionalProjectnatures> <projectnature>org.eclipse.pde.PluginNature</projectnature> 
-						<projectnature>org.eclipse.jdt.core.javanature</projectnature> </additionalProjectnatures> -->
-					<classpathContainers>
-						<classpathContainer>org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6</classpathContainer>
-						<classpathContainer>org.eclipse.pde.core.requiredPlugins</classpathContainer>
-					</classpathContainers>
-				</configuration>
-			</plugin>
+			<!-- The maven compiler plugin. It uses javac - so you will need SDK! -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
+				<!-- 3.1 is the newest, but has bugs. we use the same as tinkerpop-frames -->
+				<version>2.3.2</version>
 				<configuration>
 					<source>${compiler}</source>
 					<target>${compiler}</target>
-					<compilerArgument>-err:-forbidden,discouraged,deprecation</compilerArgument>
+
+					<showWarnings>false</showWarnings>
+					<showDeprecation>false</showDeprecation>
+					<compilerArgs>
+						<!-- good reference for XLint is: http://www.javaworld.com/article/2073587/javac-s&#x2D;&#x2D;xlint-options.html 
+							Normally, a BootstrapClassPath to a 1.6/rt.jar should be set. But I did not 
+							figure out how! <arg>-Xlint:all,-options</arg> -->
+
+						<!-- <arg>-verbose</arg> -->
+						<!-- RPr: We may have fun if we really enable this :) -->
+						<!-- <arg>-Werror</arg> -->
+
+					</compilerArgs>
 				</configuration>
 			</plugin>
+
+			<!-- the enforcer plugin controls certain environment rules, don't know 
+				if we need this <plugin> <artifactId>maven-enforcer-plugin</artifactId> <version>1.3.1</version> 
+				<executions> <execution> <id>enforce-all</id> <goals> <goal>enforce</goal> 
+				</goals> <configuration> <rules> <DependencyConvergence /> <requireJavaVersion> 
+				<version>[1.6,1.8)</version> </requireJavaVersion> </rules> </configuration> 
+				</execution> </executions> </plugin> -->
+
+
+			<!-- Build helper to include LICENSE + NOTICE in every project -->
 			<plugin>
-				<!-- enable tycho build extension -->
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-maven-plugin</artifactId>
-				<version>${tycho-version}</version>
-				<extensions>true</extensions>
-				<configuration>
-					<pomDependencies>consider</pomDependencies>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-packaging-plugin</artifactId>
-				<version>${tycho-version}</version>
-			</plugin>
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-compiler-plugin</artifactId>
-				<version>${tycho-version}</version>
-				<configuration>
-					<source>${compiler}</source>
-					<target>${compiler}</target>
-					<compilerArgument>-err:-forbidden,discouraged,deprecation</compilerArgument>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-source-plugin</artifactId>
-				<version>${tycho-version}</version>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>1.8</version>
 				<executions>
 					<execution>
-						<id>plugin-source</id>
+						<id>add-license</id>
+						<phase>generate-resources</phase>
 						<goals>
-							<goal>plugin-source</goal>
+							<goal>add-resource</goal>
+						</goals>
+						<configuration>
+							<resources>
+								<resource>
+									<directory>${basedir}</directory>
+									<targetPath />
+									<includes>
+										<include>LICENSE</include>
+										<include>NOTICE</include>
+									</includes>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- the surefire plugin -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.18.1</version>
+				<configuration>
+					<skip>${skip.tests}</skip>
+					<argLine>-Xms512m -Xmx512m</argLine>
+					<!-- -Dnotes.binary=${domino_install} -Djava.library.path=${domino_install} 
+						-Djava.ext.dirs=${domino_ install}\jvm\lib\ext\;${domino_install}\ndext; 
+						-Djava.compiler=jitc -Dnotes.init.jvm1 -Xbootclasspath/a:${domino_install}\jvm\lib\tools.jar 
+						-Xdisablejavadump -Xrs:all -Xnoagent -Xdebug <systemPropertyVariables> <java.library.path>BLABLABLA</java.library.path> 
+						</systemPropertyVariables> -->
+
+					<environmentVariables>
+						<!--
+							For linux, we must add "." to LD_LIBRARY_PATH
+							Windows does not pay attention to this entry 
+						-->
+						<LD_LIBRARY_PATH>.</LD_LIBRARY_PATH>
+					</environmentVariables>
+					<workingDirectory>${domino.installdir}</workingDirectory>
+				</configuration>
+			</plugin>
+
+			<!-- generate source packages -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.4</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
 						</goals>
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>target-platform-configuration</artifactId>
-				<version>${tycho-version}</version>
-				<configuration>
-					<environments>
-						<environment>
-							<os>linux</os>
-							<ws>gtk</ws>
-							<arch>x86</arch>
-						</environment>
-						<environment>
-							<os>linux</os>
-							<ws>gtk</ws>
-							<arch>x86_64</arch>
-						</environment>
-						<environment>
-							<os>win32</os>
-							<ws>win32</ws>
-							<arch>x86</arch>
-						</environment>
-						<environment>
-							<os>win32</os>
-							<ws>win32</ws>
-							<arch>x86_64</arch>
-						</environment>
-						<environment>
-							<os>macosx</os>
-							<ws>cocoa</ws>
-							<arch>x86_64</arch>
-						</environment>
-					</environments>
-					<dependency-resolution>
-						<extraRequirements>
-							<requirement>
-								<type>eclipse-plugin</type>
-								<id>com.ibm.notes.java.api.win32.linux</id>
-								<versionRange>[9.0.1,9.0.2)</versionRange>
-							</requirement>
-						</extraRequirements>
-					</dependency-resolution>
-					<resolver>p2</resolver>
-				</configuration>
-			</plugin>
-			<!-- <plugin> <groupId>org.eclipse.tycho.extras</groupId> <artifactId>tycho-p2-extras-plugin</artifactId> 
-				<version>${tycho-version}</version> <configuration> <source> source repositories 
-				to mirror from <repository> <url>http://download.eclipse.org/releases/juno/</url> 
-				<layout>p2</layout> </repository> </source> </configuration> </plugin> -->
-			<!-- <plugin> <groupId>org.eclipse.tycho</groupId> <artifactId>tycho-p2-repository-plugin</artifactId> 
-				<version>${tycho-version}</version> <configuration> <includeAllDependencies>true</includeAllDependencies> 
+
+			<!-- javadoc configuration <plugin> <groupId>org.apache.maven.plugins</groupId> 
+				<artifactId>maven-javadoc-plugin</artifactId> <version>2.9</version> <executions> 
+				<execution> <id>attach-javadocs</id> <goals> <goal>jar</goal> </goals> </execution> 
+				</executions> <configuration> <failOnError>false</failOnError> <excludePackageNames>com.sun.*:com.ibm.icu.*:com.ibm.commons.*:com.ibm.sbt.core.*:com.ibm.sbt.plugin.*:com.ibm.sbt.jslibrray.*:com.ibm.sbt.proxy.*:com.ibm.sbt.security.*:*.util.*:com.ibm.sbt.portlet.*:com.ibm.sbt.playground.*:demo.*:acme.*</excludePackageNames> 
 				</configuration> </plugin> -->
 		</plugins>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<!-- javadoc configuration -->
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>2.9</version>
-					<configuration>
-						<failOnError>false</failOnError>
-						<excludePackageNames>com.sun.*:com.ibm.commons.*:com.ibm.sbt.core.*:com.ibm.sbt.plugin.*:com.ibm.sbt.jslibrray.*:com.ibm.sbt.proxy.*:com.ibm.sbt.security.*:*.util.*:com.ibm.sbt.portlet.*:com.ibm.sbt.playground.*:demo.*:acme.*</excludePackageNames>
-
-						<doclet>org.jboss.apiviz.APIviz</doclet>
-						<docletArtifact>
-							<groupId>org.jboss.apiviz</groupId>
-							<artifactId>apiviz</artifactId>
-							<version>1.3.1.GA</version>
-						</docletArtifact>
-						<useStandardDocletOptions>true</useStandardDocletOptions>
-						<charset>UTF-8</charset>
-						<encoding>UTF-8</encoding>
-						<docencoding>UTF-8</docencoding>
-						<breakiterator>true</breakiterator>
-						<version>true</version>
-						<author>true</author>
-						<keywords>true</keywords>
-						<additionalparam>
-							-sourceclasspath ${project.build.outputDirectory}
-						</additionalparam>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
 	</build>
 
 	<licenses>
@@ -197,56 +225,5 @@
 			<comments>A business-friendly OSS license</comments>
 		</license>
 	</licenses>
-
-	<!-- List all developers here -->
-	<developers>
-		<developer>
-			<id>AWa</id>
-			<name>Alex Wagner</name>
-			<email>alexander.wagner@foconis.de</email>
-			<organization>FOCONIS AG</organization>
-			<organizationUrl>http://www.foconis.de</organizationUrl>
-			<roles>
-				<role>architect</role>
-				<role>developer</role>
-			</roles>
-			<timezone>+1</timezone>
-		</developer>
-		<developer>
-			<id>MSte</id>
-			<name>Manfred Steinsiek</name>
-			<email>manfred.steinsiek@foconis.de</email>
-			<organization>FOCONIS AG</organization>
-			<organizationUrl>http://www.foconis.de</organizationUrl>
-			<roles>
-				<role>architect</role>
-				<role>developer</role>
-			</roles>
-			<timezone>+1</timezone>
-		</developer>
-		<developer>
-			<id>RPr</id>
-			<name>Roland Praml</name>
-			<email>roland.praml@foconis.de</email>
-			<organization>FOCONIS AG</organization>
-			<organizationUrl>http://www.foconis.de</organizationUrl>
-			<roles>
-				<role>architect</role>
-				<role>developer</role>
-			</roles>
-			<timezone>+1</timezone>
-			<properties>
-				<picUrl><![CDATA[https://avatars2.githubusercontent.com/u/5530228?v=2&s=60]]></picUrl>
-			</properties>
-		</developer>
-	</developers>
-
-	<distributionManagement>
-		<site>
-			<id>www.openntf.org</id>
-			<url>file://c:\fullsite/</url>
-		</site>
-	</distributionManagement>
-
 
 </project>
